# dbt-cost

./: README.md  pyproject.toml
src/dbt_cost/: __init__.py  cli.py
