[project]
name = "dbt-cost"
version = "0.1.0"
description = "BigQuery cost estimation for dbt models using dry-run API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
]

[project.scripts]
# This registers "dbt-cost" as a CLI command when installed
dbt-cost = "dbt_cost.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_cost"]
